objects/Channel_Business_Review_Market_Trend__c.object
<CustomObject>
    <description>R5-Custom object to define Channel Business Review Market Trend</description>
    <fields>
        <fullName>Channel_Business_Review__c</fullName>
        <description>R5 Master relation ship Channel Business Review</description>
        <label>Channel Business Review</label>
        <referenceTo>Channel_Business_Review__c</referenceTo>
        <relationshipName>Channel_Business_Review_Market_Trends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <description>R5-Picklist contains Feedback values</description>
        <label>Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable/ OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focussed_Industry_Backup2__c</fullName>
        <label>Focussed Industry Backup2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Focussed_Industry_Backup__c</fullName>
        <label>Focussed Industry Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focussed_Industry__c</fullName>
        <description>R5 - Picklist contains Focussed Industry Values</description>
        <label>Focused Industry</label>
        <picklist>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>R5 - Notes</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address Country from Account .</description>
        <formula>TEXT( Channel_Business_Review__r.Account__r.Primary_Address_Country__c )</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <label>Market trend detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Channel_Business_Review__c</columns>
        <columns>Focussed_Industry__c</columns>
        <columns>Feedback__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MARKET TREND - {0000}</displayFormat>
        <label>Market Trend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market trend details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Channel_Business_Review_Closed_Check</fullName>
        <active>true</active>
        <description>R5 - If Channel Business review Status is Obsolete/Completed, then the user should not edit the Channel Business review Market Trend</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
OR(ISPICKVAL( Channel_Business_Review__r.Status__c , &apos;Obsolete&apos;),
ISPICKVAL( Channel_Business_Review__r.Status__c , &apos;Completed&apos;))
)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Review is Closed</errorMessage>
    </validationRules>
</CustomObject>